provider issue fix

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },"extra": {
         "laravel": {
             "providers": [
-                "Devshimul\\CustomBlade\\ServiceProvider"
+                "Devshimul\\CustomBlade\\CustomBladeServiceProvider"
             ]
         }
     }
